[tool.poetry]
name = "mamba-swift-convert-model"
version = "0.1.0"
description = ""
authors = ["Cayal Walker <cayalw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.1.0-cp311-none-macosx_11_0_arm64.whl"}
transformers = "^4.36.2"

[tool.poetry.group.dev.dependencies]
huggingface-hub = {extras = ["cli"], version = "^0.19.4"}
hf-transfer = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
